implementando filtro de pacientes com uso de expressao regular

--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
 		<main>
 			<section class="container">
 				<h2>Meus pacientes</h2>
+				<h4>Filtrar:</h4>
 				<input type="text" name="filtro" id="filtrar-tabela" placeholder="Digite o nome do paciente">
 				<table>
 					<thead>
@@ -70,6 +71,8 @@
 						</tr>
 					</tbody>
 				</table>
+				
+				<button id="adicionar-paciente" class="botao bto-principal">Buscar Pacientes</button>
 
 			</section>
 
@@ -103,6 +106,7 @@
 		<script src="js/form.js" ></script>
 		<script src="js/remover-paciente.js" ></script>
 		<script src="js/filtra.js" ></script>
+		<script src="js/buscar-pacientes.js" ></script>
 
 	</body>
 </html>
