adicionando pacientes da api via ajax

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 					</tbody>
 				</table>
 				
-				<button id="adicionar-paciente" class="botao bto-principal">Buscar Pacientes</button>
+				<button id="buscar-pacientes" class="botao bto-principal">Buscar Pacientes</button>
 
 			</section>
 
